--- a/rules.html
+++ b/rules.html
@@ -1,30 +1,30 @@
 ﻿<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rules | Confusion Matrix</title>
+    <link rel="stylesheet" href="https://stackedit.io/style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>rules</title>
-  <link rel="stylesheet" href="https://stackedit.io/style.css" />
-</head>
-
-<body class="stackedit">
-  <div class="stackedit__html"><h1 id="rules...">Rules…</h1>
-<blockquote>
-<blockquote>
-<p>And yes, if caught you will be disqualified, sorry 😏</p>
-</blockquote>
-</blockquote>
-<h2 id="rules-">Rules :</h2>
-<ul>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-</ul>
-<pre><code></code></pre>
-</div>
-</body>
-
+  <body class="stackedit">
+    <div class="stackedit__html">
+      <p><a href="index.html">```</a></p>
+      <h1 id="rules...">Rules…</h1>
+      <blockquote>
+        <blockquote>
+          <p>And yes, if caught you will be disqualified, sorry 😏</p>
+        </blockquote>
+      </blockquote>
+      <h2 id="rules-">Rules :</h2>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <pre><code></code></pre>
+    </div>
+  </body>
 </html>
