--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 ﻿<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Docs | Confusion Matrix</title>
+    <link rel="stylesheet" href="https://stackedit.io/style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>index</title>
-  <link rel="stylesheet" href="https://stackedit.io/style.css" />
-</head>
-
-<body class="stackedit">
-  <div class="stackedit__html"><h1 id="hey-there-hows-it-going">Hey there, how’s it going?</h1>
-<h2 id="oh...you-are-here-to-play-confusion-matrix-thats-a-fantastic-idea.-i-am-so-proud-of-you.-but-first-you-should-probably-read-up-on-the-manual-it-should-come-in-handy-during-the-game.">Oh…you are here to play Confusion Matrix? That’s a fantastic idea. I am so proud of you. But first, you should probably read up on the manual, it should come in handy during the game.</h2>
-<p>Let’s try to make it fair for everyone, okay? Oh, and make sure to have fun 😛</p>
-<ul>
-<li><a href="roles.html">Read about all the characters in the game</a></li>
-<li><a href="gameplay.html">Gameplay Breakdown </a></li>
-<li><a href="rules.html">Some rules you should know</a></li>
-</ul>
-<pre><code>
+  <body class="stackedit">
+    <div class="stackedit__html">
+      <h1 id="hey-there-hows-it-going">Hey there, how’s it going?</h1>
+      <h2
+        id="oh...you-are-here-to-play-confusion-matrix-thats-a-fantastic-idea.-i-am-so-proud-of-you.-but-first-you-should-probably-read-up-on-the-manual-it-should-come-in-handy-during-the-game."
+      >
+        Oh…you are here to play Confusion Matrix? That’s a fantastic idea. I am
+        so proud of you. But first, you should probably read up on the manual,
+        it should come in handy during the game.
+      </h2>
+      <p>
+        Let’s try to make it fair for everyone, okay? Oh, and make sure to have
+        fun 😛
+      </p>
+      <ul>
+        <li>
+          <a href="roles.html">Read about all the characters in the game</a>
+        </li>
+        <li><a href="gameplay.html">Gameplay Breakdown </a></li>
+        <li><a href="rules.html">Some rules you should know</a></li>
+      </ul>
+      <pre><code>
 </code></pre>
-</div>
-</body>
-
+    </div>
+  </body>
 </html>
