--- a/roles.html
+++ b/roles.html
@@ -1,75 +1,105 @@
 ﻿<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Roles | Confusion Matrix</title>
+    <link rel="stylesheet" href="https://stackedit.io/style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>roles.md</title>
-  <link rel="stylesheet" href="https://stackedit.io/style.css" />
-</head>
-
-<body class="stackedit">
-  <div class="stackedit__left">
-    <div class="stackedit__toc">
-      
-<ul>
-<li><a href="#roles...">Roles…</a>
-<ul>
-<li><a href="#citizen-">Citizen :</a></li>
-<li><a href="#terrorist-">Terrorist :</a></li>
-<li><a href="#researcher">Researcher:</a></li>
-<li><a href="#psychopath">Psychopath:</a></li>
-<li><a href="#inspector">Inspector:</a></li>
-<li><a href="#reporter">Reporter:</a></li>
-<li><a href="#disclaimer">Disclaimer:</a></li>
-</ul>
-</li>
-</ul>
-
+  <body class="stackedit">
+    <div class="stackedit__left">
+      <div class="stackedit__toc">
+        <ul>
+          <li>
+            <a href="#roles...">Roles…</a>
+            <ul>
+              <li><a href="#citizen-">Citizen :</a></li>
+              <li><a href="#terrorist-">Terrorist :</a></li>
+              <li><a href="#researcher">Researcher:</a></li>
+              <li><a href="#psychopath">Psychopath:</a></li>
+              <li><a href="#inspector">Inspector:</a></li>
+              <li><a href="#reporter">Reporter:</a></li>
+              <li><a href="#disclaimer">Disclaimer:</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <div class="stackedit__right">
-    <div class="stackedit__html">
-      <p><a href="index.html">```</a></p>
-<h1 id="roles...">Roles…</h1>
-<blockquote>
-<p>It’s important… read up.</p>
-</blockquote>
-<h2 id="citizen-">Citizen :</h2>
-<p><strong>Citizen</strong> roles: As citizens, your objective is to assist in eliminating the terrorists as quickly as possible.</p>
-<h2 id="terrorist-">Terrorist :</h2>
-<p><strong>Terrorist</strong> roles: In the game, two radicals will each possess an antidote, a poison, and one bullet.<br>
-<strong>Antidote</strong>: Use this to cure anybody at any point during the game.<br>
-<strong>Poison</strong>: Can be used to infect anyone.<br>
-<strong>Bullet</strong>: Terrorists have one bullet in the entire game that they can use to eliminate any player.</p>
-<h2 id="researcher">Researcher:</h2>
-<p><strong>Researcher</strong> roles: The scholars’ role is to find the cure. They need to identify the player with the antibody. Once any researcher cures a citizen with the cure and survives that round, the gods will publicly announce that the research is 50% completed. And in the further rounds if another researcher cures that player with antibody and if that player with antibodies survive that round the gods will publicly announce the research is 100% completed.</p>
-<h2 id="psychopath">Psychopath:</h2>
-<p><strong>Psychopath</strong> roles: The fanatic’s role is to die as early as possible to earn extra points.<br>
-<strong>Points:</strong></p>
-<ul>
-<li>Dies in the first round: 3 extra points</li>
-<li>Dies in the second round: 2 extra points</li>
-<li>Dies in the third round: 1 extra point</li>
-<li>Dies in the fourth round: 0 extra points</li>
-</ul>
-<h2 id="inspector">Inspector:</h2>
-<p><strong>Inspector</strong> roles: The inspector will receive a bullet in each round, which can be used to eliminate any player. The objective is to earn as many extra points as possible.<br>
-<strong>Points:</strong><br>
-The inspector will earn extra points if they eliminate all the terrorists as early as possible.</p>
-<ul>
-<li>All terrorists die in the second round: 3 extra points</li>
-<li>All terrorists die in the third round: 2 extra points</li>
-<li>All terrorists die in the fourth round: 1 extra point</li>
-</ul>
-<h2 id="reporter">Reporter:</h2>
-<p><strong>Reporter</strong> roles: Reporters have the power to suspect anyone among them and ask their identity directly from the moderator (God). This ability refreshes once every round. To inquire about someone’s identity, they’ll have to leave the colosseum and go to the angel room.</p>
-<h2 id="disclaimer">Disclaimer:</h2>
-<p>Every character apart from these defined roles is an ordinary citizen.<br>
-Every player has the ability to get tested once by going into the Angel room to check they’re infected or not.</p>
-
+    <div class="stackedit__right">
+      <div class="stackedit__html">
+        <p><a href="index.html">```</a></p>
+        <h1 id="roles...">Roles…</h1>
+        <blockquote>
+          <p>It’s important… read up.</p>
+        </blockquote>
+        <h2 id="citizen-">Citizen :</h2>
+        <p>
+          <strong>Citizen</strong> roles: As citizens, your objective is to
+          assist in eliminating the terrorists as quickly as possible.
+        </p>
+        <h2 id="terrorist-">Terrorist :</h2>
+        <p>
+          <strong>Terrorist</strong> roles: In the game, two radicals will each
+          possess an antidote, a poison, and one bullet.<br />
+          <strong>Antidote</strong>: Use this to cure anybody at any point
+          during the game.<br />
+          <strong>Poison</strong>: Can be used to infect anyone.<br />
+          <strong>Bullet</strong>: Terrorists have one bullet in the entire game
+          that they can use to eliminate any player.
+        </p>
+        <h2 id="researcher">Researcher:</h2>
+        <p>
+          <strong>Researcher</strong> roles: The scholars’ role is to find the
+          cure. They need to identify the player with the antibody. Once any
+          researcher cures a citizen with the cure and survives that round, the
+          gods will publicly announce that the research is 50% completed. And in
+          the further rounds if another researcher cures that player with
+          antibody and if that player with antibodies survive that round the
+          gods will publicly announce the research is 100% completed.
+        </p>
+        <h2 id="psychopath">Psychopath:</h2>
+        <p>
+          <strong>Psychopath</strong> roles: The fanatic’s role is to die as
+          early as possible to earn extra points.<br />
+          <strong>Points:</strong>
+        </p>
+        <ul>
+          <li>Dies in the first round: 3 extra points</li>
+          <li>Dies in the second round: 2 extra points</li>
+          <li>Dies in the third round: 1 extra point</li>
+          <li>Dies in the fourth round: 0 extra points</li>
+        </ul>
+        <h2 id="inspector">Inspector:</h2>
+        <p>
+          <strong>Inspector</strong> roles: The inspector will receive a bullet
+          in each round, which can be used to eliminate any player. The
+          objective is to earn as many extra points as possible.<br />
+          <strong>Points:</strong><br />
+          The inspector will earn extra points if they eliminate all the
+          terrorists as early as possible.
+        </p>
+        <ul>
+          <li>All terrorists die in the second round: 3 extra points</li>
+          <li>All terrorists die in the third round: 2 extra points</li>
+          <li>All terrorists die in the fourth round: 1 extra point</li>
+        </ul>
+        <h2 id="reporter">Reporter:</h2>
+        <p>
+          <strong>Reporter</strong> roles: Reporters have the power to suspect
+          anyone among them and ask their identity directly from the moderator
+          (God). This ability refreshes once every round. To inquire about
+          someone’s identity, they’ll have to leave the colosseum and go to the
+          angel room.
+        </p>
+        <h2 id="disclaimer">Disclaimer:</h2>
+        <p>
+          Every character apart from these defined roles is an ordinary
+          citizen.<br />
+          Every player has the ability to get tested once by going into the
+          Angel room to check they’re infected or not.
+        </p>
+      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
