--- a/rules.html
+++ b/rules.html
@@ -1,46 +1,53 @@
 ﻿<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rules | Confusion Matrix</title>
+    <link rel="stylesheet" href="https://stackedit.io/style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>rules.md</title>
-  <link rel="stylesheet" href="https://stackedit.io/style.css" />
-</head>
-
-<body class="stackedit">
-  <div class="stackedit__left">
-    <div class="stackedit__toc">
-      
-<ul>
-<li><a href="#rules...">Rules…</a>
-<ul>
-<li><a href="#rules">Rules:</a></li>
-</ul>
-</li>
-</ul>
-
+  <body class="stackedit">
+    <div class="stackedit__left">
+      <div class="stackedit__toc">
+        <ul>
+          <li>
+            <a href="#rules...">Rules…</a>
+            <ul>
+              <li><a href="#rules">Rules:</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <div class="stackedit__right">
-    <div class="stackedit__html">
-      <p><a href="index.html">```</a></p>
-<h1 id="rules...">Rules…</h1>
-<blockquote>
-<p>And yes, if caught, you will be disqualified, sorry 😏</p>
-</blockquote>
-<h2 id="rules">Rules:</h2>
-<ul>
-<li>Firstly, no violence.</li>
-<li>No theft. If caught at any point, you’ll be disqualified. (This includes theft of points.)</li>
-<li>Temporary absence of more than 5 minutes is grounds for disqualification.</li>
-<li>Arguing with gods or angels results in direct disqualification.</li>
-<li>It’s just a verbal duel, friends… So have fun. No need for personal agendas. Work and play within the rules.</li>
-</ul>
-<pre><code></code></pre>
-
+    <div class="stackedit__right">
+      <div class="stackedit__html">
+        <p><a href="index.html">```</a></p>
+        <h1 id="rules...">Rules…</h1>
+        <blockquote>
+          <p>And yes, if caught, you will be disqualified, sorry 😏</p>
+        </blockquote>
+        <h2 id="rules">Rules:</h2>
+        <ul>
+          <li>Firstly, no violence.</li>
+          <li>
+            No theft. If caught at any point, you’ll be disqualified. (This
+            includes theft of points.)
+          </li>
+          <li>
+            Temporary absence of more than 5 minutes is grounds for
+            disqualification.
+          </li>
+          <li>
+            Arguing with gods or angels results in direct disqualification.
+          </li>
+          <li>
+            It’s just a verbal duel, friends… So have fun. No need for personal
+            agendas. Work and play within the rules.
+          </li>
+        </ul>
+        <pre><code></code></pre>
+      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
