modified citizen roles

--- a/roles.html
+++ b/roles.html
@@ -36,7 +36,8 @@
         <h2 id="citizen-">Citizen :</h2>
         <p>
           <strong>Citizen</strong> roles: As citizens, your objective is to
-          assist in eliminating the terrorists as quickly as possible.
+          assist in eliminating the terrorists as quickly as possible and
+          survive till the end of the game.
         </p>
         <h2 id="terrorist-">Terrorist :</h2>
         <p>
